# Whetstone

./: .gitignore  CHANGELOG.md  Makefile  README.md  RUNNING.md  SMOKE_TEST.md
.github/workflows/: ci.yml
apps/backend/: README.md  alembic.ini  config.py  db.py  events.py  main.py  models.py  pyproject.toml  schemas.py
apps/backend/alembic/: env.py
apps/backend/model_eval/: .gitignore  README.md  __init__.py  datasets.py  grading.py  run.py
apps/backend/routers/: __init__.py  ai.py  cells.py  sessions.py  spec.py
apps/backend/services/: __init__.py  llm_client.py  psirver_client.py  spec_parser.py  stt_client.py
apps/backend/tests/: test_integration.py
apps/desktop/: index.html  package-lock.json  package.json  vitest.config.ts
apps/desktop/design/: Whetstone.reference.html
apps/desktop/src/: App.css  App.tsx  api.test.ts  api.ts  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src/components/: Timeline.css  Timeline.test.tsx  Timeline.tsx
apps/desktop/src/test/: setup.ts
apps/desktop/src/workspace/: CoPilotPane.test.tsx  CoPilotPane.tsx  Footer.tsx  Header.tsx  NotebookPane.test.tsx  NotebookPane.tsx  RequirementsPane.tsx  StatusMenu.tsx  TimelineDrawer.tsx  WorkspaceLayout.modeRoundTrip.test.tsx  WorkspaceLayout.tsx  (+1 more)
docs/: Whetstone_SRS.md  model-eval.md
models/: README.md
scripts/: dev.sh
services/psirver/: README.md
services/psirver/src/: .gitignore  Jobs.cc  Jobs.hh  Limits.cc  Limits.hh  Makefile  TaskFactory.cc  Tasks.cc  Tasks.hh  json.hpp  limits_demo.sh  psirver.cc  utils.cc  utils.hh
